# bc_learning_sound

./: .gitignore  main.py  opts.py  pyproject.toml  train.py
dataset_gen/: noise_gen.jl
models/: envnet.py  envnetv2.py
