[tool.poetry]
name = "bc_learning_sound"
version = "0.1.0"
description = ""
authors = ["Keita Goto <goto.k.al@m.titech.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.1"
wavio = "^0.0.4"
chainer = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
